// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1rem"
    font-style="normal"
    font-weight="700"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with variant "large" 1`] = `
.c0 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.75rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h4
    class="c0"
    color="hsla(217, 18%, 45%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1.25rem"
    font-style="normal"
    font-weight="400"
  >
    Get Started With Payment Gateway
  </h4>
</div>
`;

exports[`<Heading /> should render Heading with variant "medium" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.125rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.75rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h5
    class="c0"
    color="hsla(216, 16%, 60%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1.125rem"
    font-style="normal"
    font-weight="400"
  >
    Get Started With Payment Gateway
  </h5>
</div>
`;

exports[`<Heading /> should render Heading with variant "small" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1rem"
    font-style="normal"
    font-weight="400"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with variant "small" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="1rem"
    font-style="normal"
    font-weight="400"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with variant "subheading" and weight "bold" 1`] = `
.c0 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    color="hsla(217, 18%, 45%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.75rem"
    font-style="normal"
    font-weight="700"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;
